# future-forecasting

./: .env.example  .gitignore  .python-version  IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  WARP.md  crawl4ai_results_cos.jsonl  get_world_bank.py  prompt.md  pyproject.toml  requirements.txt  wbokr_text_only.py
config/: main_content_selectors.py  settings.toml  sociomedia_sources.toml  substack_authors.toml
config/proxy_pool/: high_quality_proxies.json
data/test/: debug_crawl.jsonl  debug_crawl.jsonl.raw_md
data/url_pool/: url_pool.db  url_pool.jsonl  url_pool_filter.debug.jsonl  url_pool_filter.jsonl
docs/: benchmark_data_contract.md  build_result_zh.md  prompts_zh.md
src/: __init__.py  a.ipynb  a.py  c.py  cli.py  d.py  e.py  main.py  package-lock.json  proxies.json  snapshot_urls.txt
src/agent/: __init__.py  agent.py  tools.py
src/core/: __init__.py  contracts.py  io.py  runner.py  state.py
src/crawler/: __init__.py  crawler.py  extractor.py  news_crawler.py  proxy_pool.py
src/experiments/: __init__.py  base.py  experiment.py
src/forecasting/: __init__.py  (+9 more)
tests/: test_agent_runtime.py  test_crawler.py  test_embeddings_cache.py  test_env_and_cli.py  test_exa_search.py  test_experiment_registry.py  test_fixed_question_subset.py  test_forecasting_runner.py  test_gdelt_downloader.py  test_method_registry.py  test_method_sessions.py  test_openbb_support.py  test_pre_exp_calibration.py  test_pre_exp_memory.py  test_pre_exp_questions.py  test_pre_exp_run.py  test_pre_exp_tools.py  test_search_backend.py  test_url_pool_builder.py  test_utils.py
(+116 files in other folders)
