[project]
name = "future-foreacsting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.3.0",
    "loguru>=0.7.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "playwright>=1.57.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "pyfreeproxy>=0.3.1",
    "pydantic>=2.8.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "trafilatura>=1.6.0",
    "tldextract>=5.0.0",
    "tomli>=2.0.0 ; python_full_version < '3.11'",
    "tomli-w>=1.0.0",
    "tqdm>=4.66.0",
    "urllib3>=2.0.0",
    "httpx[socks]>=0.28.1",
    "waybackpy>=3.0.6",
    "fake-useragent>=2.2.0",
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "scikit-learn>=1.7.2",
    "openbb>=4.6.0",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.5",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
